syntax = "proto3";

package guru.qa.grpc.country;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.country";
option java_outer_classname = "CountryProto";


service CountryService {
  rpc Country (IdRequest) returns (CountryResponse) {}
  rpc AddCountry (CountryRequest) returns (CountryResponse) {}
  rpc AddCountries (stream CountryRequest) returns (CountResponse) {}
  rpc RandomCountry (CountRequest) returns (stream CountryResponse) {}
}

message IdRequest {
  string id = 1;
}

message CountRequest {
  uint32 count = 1;
}

message CountResponse {
  uint32 count = 1;
}

message CountryRequest {
  string name = 1;
  string code = 2;
}

message CountryResponse {
  string id = 1;
  string name = 2;
  string code = 3;
}
